removed .dvc/tmp and ignored .dvc/tmp folder for security reasons.

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,6 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks,pycharm
+
+### DVC ###
+.dvc/tmp/
