--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/jupyternotebooks,pycharm
-# Edit at https://www.toptal.com/developers/gitignore?templates=jupyternotebooks,pycharm
-
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
-
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 
@@ -119,7 +114,15 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
 
-# End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks,pycharm
-
 ### DVC ###
 .dvc/tmp/
+
+### vscode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks,pycharm
