--- a/.gitignore
+++ b/.gitignore
@@ -124,4 +124,18 @@ fabric.properties
 !.vscode/extensions.json
 *.code-workspace
 
+### venv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+pip-selfcheck.json
+
 # End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks,pycharm
